# racoon1106

./: .gitignore  app.py  chainlit.md  package-lock.json  pyproject.toml  qanda.csv  requirements.txt
.chainlit/: config.toml
faiss_index/: index.faiss  index.pkl
public/: my_js_script.js
