[tool.poetry]
name = "poetry install"
version = "0.1.0"
description = ""
authors = ["Victor Lopez <domitor.lopez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.3"
openai = "^1.33.0"
pandas = "^2.0.3"
tabulate = "^0.9.0"
chainlit = "^1.1.202"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
